2003-03-24  Gaute Lindkvist <lindkvis@stud.ntnu.no>

	* libnautilus-private/nautilus-file.h:
        * libnautilus-private/nautilus-file.c (nautilus_file_get_string_attribute),
	(nautilus_file_get_volume_name),
	(nautilus_file_get_volume_free_space)
	Added functions for finding volume name and free space

	* src/file-manager/fm-properties-window.c (should_show_free_space),
	(create_basic_page)
	Now shows volume name and free space
		
2003-03-24  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-manage-views.c (nautilus_window_reload):
	Scroll to current position on reload.

2003-03-22  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Walloon (wa) to ALL_LINGUAS

2003-03-19  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (select_one_unselect_others):
	Fix crash.
	
2003-03-19  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-view-frame.c (attach_view):
	If the ViewFrame is mapped already, activate the frame control.
	This fixes the tree sidebar not loading when you hide/show the
	sidebar.

2003-03-19  Padraig O'Briain  <padraig.obriain@sun.com>

	* libnautilus-private/nautilus-icon-canvas-item.c
	(nautilus_icon_canvas_item_accessible_ref_state_set): New function
	which sets which state ATK_STATE_FOCUSED, if appropriate.

	* libnautilus-private/nautilus-icon-container.c
	(select_one_unselect_others): Call atk_focus_tracker_notify() if
	selection changed.

	This fixes bug #107639.

2003-03-18  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-emblem-utils.c:
	(is_reserved_keyword), (nautilus_emblem_should_show_in_list):
	notes emblem is a reserved name, and does not show up in lists.
	
	* libnautilus-private/nautilus-file.h:
	Added notes emblem name
	
	* libnautilus-private/nautilus-file.c: (file_has_note),
	(get_automatic_emblems_as_integer),
	(prepend_automatic_emblem_names):
	Implement automatic notes emblem.

2003-03-18  Alexander Larsson  <alexl@redhat.com>
